# rs-remedy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: algebra.rem  xascii.rem
src/: args.rs  cache.rs  display.rs  main.rs  profile.rs  register.rs  select.rs  tokens.rs  workspace.rs
src/register/: arg.rs  command.rs
