[package]
name = "remedy"
version = "0.1.1"
authors = ["Rowan Clarke <36474636+rowanclarke@users.noreply.github.com>"]
license = "MIT"
description = "Tool for thinking and learning"
edition = "2021"
repository = "https://github.com/rowanclarke/rs-remedy"
readme = "README.md"
keywords = ["cli", "learn", "revise", "think", "second-brain", "zettelkasten"]

[dependencies]
remediate = "0.2.1"
clap = { version = "4.3.3", features = ["derive"] }
termion = "2.0.1"
strum = { version = "0.25.0", features = ["derive"] }