[package]
name = "remedy"
version = "0.1.0"
edition = "2021"

[dependencies]
stabby = { version = "1.0.4", features = ["libloading"], path = "/home/rowan/repos/stabby/stabby" }
libloading = "0.8.0"
clap = "4.3.14"
take_mut = "0.2.2"
remedy-macros = { version = "0.1.0", path = "../rs-remedy-macros" }
tower-lsp = "0.20.0"
tokio = { version = "1.32.0", features = ["full"] }
pest = "2.7.3"
pest_meta = "2.7.3"
